# IR_ProyectoFinal

./: CMakeLists.txt  README.md
op3_leo/: package.xml
op3_leo/launch/: gazebo.launch  robot.launch
op3_leo/op3_leo/: CMakeLists.txt
op3_leo/op3_leo/launch/: robot.launch
op3_leo/src/: read_write.cpp
proyecto/: CMakeLists.txt  package.xml
proyecto/include/: dh2link.hpp
proyecto/src/: proyecto.cpp
src/: dh2link.cpp  main.cpp  proyecto.cpp  prueba.cpp
