<?xml version="1.0"?>
<package format="2">
  <name>op3_leo</name>
  <version>0.0.1</version>
  <description>
    The op3_leo package
  </description>
  
  <license>BSD</license>
  <author email="leocampos@tec.mx">Leo Campos</author>
  <maintainer email="leocampos@tec.mx">Leo Campos</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <exec_depend>op3_manager</exec_depend>

</package>
